Update message in pantallaSi function

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ function pantalla0() {
     function pantallaSi() {
     app.innerHTML = `
         <img src="images/si.gif" width="350"><br>
-        <h2>Sabía que dirías que sí 💞💞<br>
-        mañana minecraft?? 🐭💙</h2>
+        <h2>Sabía que dirías que sí 💞💞... <br>
+        suuu minecraft?? 🐭💙</h2>
     `;
     }
 
